--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.3"
+  },
+  "devDependencies": {
+    "semantic-release": "^22.0.12"
   }
 }
