--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "^1.6.3"
   },
   "devDependencies": {
-    "semantic-release": "^22.0.12"
+    "semantic-release": "^22.0.12",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/git": "^10.0.1"
   }
 }
