--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/git": "^10.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/4ch3los/semantic-release-docker-tag.git"
+  },
+  "keywords": [
+    "semantic-release",
+    "docker"
+  ]
 }
