--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "semantic-release": "^22.0.12",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/github": "^9.2.6",
-    "@semantic-release/git": "^10.0.1"
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/changelog": "^6.0.3"
   },
   "repository": {
     "type": "git",
